--- a/jupyter/user-personalization-with-exploration.ipynb
+++ b/jupyter/user-personalization-with-exploration.ipynb
@@ -36,8 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "accessKeyId = \"AKIARKI5RPOYGZ4646GS\"\n",
-    "secretAccessKey = \"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\"\n",
+    "accessKeyId = \"clave\"\n",
+    "secretAccessKey = \"clave\"\n",
     "region_name = \"us-east-1\""
    ]
   },
